--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ $inputGross.on("change", function (event) {
     </p>
     <p>Use the 'data-step-max' attribute to limit the step velocity in HTML.</p>
     <pre><code class="language-html">&lt;input step="1" data-step-max="10" type="number" id="inputLoop" value="0" data-decimals="0" min="-10" max="360"/&gt;</code></pre>
-    <p>"Loop" the value between 0 and 360 with the 'change' Event in JavaScript.</p>
+    <p>"Loop" the value between 0 and 360 with the 'change' event in JavaScript.</p>
     <pre><code class="language-javascript">var $inputLoop = $("#inputLoop")
 $inputLoop.on("change", function (event) {
     var value = $inputLoop.val()
