better event handling (input != change)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         with <span class="code">val()</span></h3>
     <p>
         Type in a number to see the difference between 'change' and 'input' events.
-        <input type="number" id="changedInput" value="2500" min="0" max="5000000" step="10"/>
+        <input type="number" id="changedInput" value="2500" min="0" max="5000000" step="10" data-decimals="2"/>
     </p>
     <p>
         Value on input: <span id="valueOnInput"></span><br/>
