--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         /*noinspection CssUnusedSymbol*/
-        .input-group {
+        .input-group, input#classInput {
             width: 250px;
         }
     </style>
@@ -79,7 +79,8 @@
     <p>
         <input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/>
     </p>
-    <pre><code class="language-html">&lt;input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/></code></pre>
+    <pre><code
+            class="language-html">&lt;input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/></code></pre>
 
     <h3>Handle '<span class="code">change</span>' and '<span class="code">input</span>' events and
         read the value from JavaScript
@@ -116,12 +117,7 @@ $changedInput.on("change", function (event) {
 $inputGross.on("change", function (event) {
     $inputNet.val($inputGross.val() / 1.19)
 })</code></pre>
-    <h3>Classes '<span class="code">is-invalid</span>' and
-        '<span class="code">is-valid</span>'; properties '<span class="code">required</span>'
-        and '<span class="code">placeholder</span>'</h3>
-    <p>The classes <span class="code">is-invalid</span> and
-        <span class="code">is-valid</span> of the original input are copied to the created input element.
-        Also <span class="code">required</span> and <span class="code">placeholder</span> are copied.</p>
+    <h3>Attributes 'placeholder' and 'required'</h3>
     <form>
         <p>
             <input placeholder="Enter a number" required type="number" value="" min="-100" max="100"/>
@@ -130,6 +126,51 @@ $inputGross.on("change", function (event) {
                 class="language-html">&lt;input <strong>placeholder</strong>="Enter a number" <strong>required</strong> type="number" value="" min="-100" max="100"/></code></pre>
         <input type="submit" id="submitButton" class="btn btn-primary mb-4" value="Submit to test empty input"/>
     </form>
+
+    <h3>Attribute 'disabled', dynamically changing</h3>
+    <p>Attributes are handled dynamically.</p>
+    <form>
+        <p>
+            <input id="inputDisabled" disabled type="number" value="50"/>
+        </p>
+        <div class="form-check">
+            <input type="checkbox" checked class="form-check-input" id="disabledSwitch">
+            <label class="form-check-label" for="disabledSwitch">Disabled</label>
+        </div>
+        <pre><code class="language-html">&lt;input id="inputDisabled" disabled type="number" value="50"/>
+&lt;div class="form-check">
+    &lt;input type="checkbox" checked class="form-check-input" id="disabledSwitch"/>
+    &lt;label class="form-check-label" for="disabledSwitch">Disabled&lt;/label>
+&lt;/div>
+&lt;script>
+    var $inputDisabled = $("#inputDisabled")
+    var $disabledSwitch = $("#disabledSwitch")
+    $disabledSwitch.on("change", function () {
+        $inputDisabled.prop("disabled", $(this).prop("checked"))
+    })
+&lt;/script></code></pre>
+    </form>
+
+    <h3>Dynamically handling of the 'class' attribute</h3>
+    <p>
+        <input id="inputChangeClass" class="is-valid" type="number" value="50"/>
+    </p>
+    <p>
+        <label for="classInput">CSS Class</label>
+        <input id="classInput" type="text" class="form-control" value="is-valid"/>
+        Try to change the class to "is-invalid" or "text-info".
+    </p>
+
+<pre><code class="language-html">&lt;input id="inputChangeClass" class="is-valid" type="number" value="50"/>
+&lt;label for="classInput">CSS Class&lt;/label>
+&lt;input id="classInput" type="text" class="form-control" value="is-valid"/>
+&lt;script>
+    var $inputChangeClass = $("#inputChangeClass")
+    var $classInput = $("#classInput")
+    $classInput.on("input", function() {
+        $inputChangeClass.prop("class", this.value);
+    })
+&lt;/script></code></pre>
 
     <h3>Prefix and Suffix</h3>
     <p>
@@ -189,6 +230,20 @@ $inputLoop.on("change", function (event) {
     $("input[type='number']").inputSpinner()
     $("input.small").inputSpinner({groupClass: "input-group-sm"})
     $("input.large").inputSpinner({groupClass: "input-group-lg"})
+</script>
+<script>
+    var $inputChangeClass = $("#inputChangeClass")
+    var $classInput = $("#classInput")
+    $classInput.on("input", function() {
+        $inputChangeClass.prop("class", this.value);
+    })
+</script>
+<script>
+    var $inputDisabled = $("#inputDisabled")
+    var $disabledSwitch = $("#disabledSwitch")
+    $disabledSwitch.on("change", function () {
+        $inputDisabled.prop("disabled", $(this).prop("checked"))
+    })
 </script>
 <!--suppress JSUnusedLocalSymbols -->
 <script>
