--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>Repository, documentation and npm package</h2>
     <p>Find the source code, more documentation and the npm package at</p>
     <ul>
-        <li><a href="https://github.com/shaack/bootstrap-input-spinner">GitHub repository</a></li>
+        <li><a href="https://github.com/shaack/bootstrap-input-spinner">GitHub repository and documentation</a></li>
         <li><a href="https://www.npmjs.com/package/bootstrap-input-spinner">npm package</a></li>
     </ul>
     <h2>Examples</h2>
